--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -629,7 +629,11 @@
         });
     }
     function request_status() {
-        var jqxhr = $.post('{% url 'api:ajax_get_status'%}', {'order':'{{request.GET.order}}'}, function(r) {
+        data = {
+            'csrfmiddlewaretoken': $('input[name="csrfmiddlewaretoken"]').val(),
+            'order': '{{request.GET.order}}'}
+        }
+        var jqxhr = $.post('{% url 'api:ajax_get_status'%}', data, function(r) {
             console.log(r);
             if (r.status === false) {
                 $('#aprobacion_error_msg').empty().html(`
