new: Se actualiza el comportamiento de la plataforma

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -264,7 +264,7 @@
                                                     <option value="1">Casado(a)</option>
                                                     <option value="2">Divorciado(a)</option>
                                                     <option value="3">Separado(a)</option>
-                                                    <option value="4">Soltero(a)</option>
+                                                    <option value="4" selected>Soltero(a)</option>
                                                     <option value="5">Union libre</option>
                                                     <option value="6">Viudo(a)</option>
                                                 </select>
@@ -276,7 +276,7 @@
                                                 <select class="form-control" name="education_level" id="education_level" required>
                                                     <option value="">Seleccione un nivel</option>
                                                     <option value="1">Primaria</option>
-                                                    <option value="2">Profesional</option>
+                                                    <option value="2" selected>Profesional</option>
                                                     <option value="3">Secundaria</option>
                                                     <option value="4">Técnico</option>
                                                     <option value="5">Tecnológico</option>
@@ -309,7 +309,7 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="type_of_property" id="type_of_property" required>
                                                     <option value="">Seleccione un tipo</option>
-                                                    <option value="1">Arrendada</option>
+                                                    <option value="1" selected>Arrendada</option>
                                                     <option value="2">Familiar</option>
                                                     <option value="3">Propia</option>
                                                 </select>
@@ -324,7 +324,7 @@
                                                     <option value="2">De 1 a 3 meses</option>
                                                     <option value="3">De 3 a 6 meses</option>
                                                     <option value="4">De 6 a 1 año</option>
-                                                    <option value="5">De 1 a 5 años</option>
+                                                    <option value="5" selected>De 1 a 5 años</option>
                                                     <option value="6">De 5 a 10 años</option>
                                                     <option value="7">Más de 10 años</option>
                                                 </select>
@@ -340,7 +340,7 @@
                                                     <option value="">Seleccione una actividad</option>
                                                     <option value="1">Empleado</option>
                                                     <option value="2">Estudiante</option>
-                                                    <option value="3">Independiente</option>
+                                                    <option value="3" selected>Independiente</option>
                                                     <option value="4">Jubilado</option>
                                                 </select>
                                             </div>
@@ -354,7 +354,7 @@
                                                     <option value="2">Jubilado</option>
                                                     <option value="3">Obra o Labor</option>
                                                     <option value="4">Ocasional</option>
-                                                    <option value="5">Prestación de Servicios</option>
+                                                    <option value="5" selected>Prestación de Servicios</option>
                                                     <option value="6">Término Fijo</option>
                                                     <option value="7">Término Indefinido</option>
                                                 </select>
@@ -369,7 +369,7 @@
                                                     <option value="2">De 1 a 3 meses</option>
                                                     <option value="3">De 3 a 6 meses</option>
                                                     <option value="4">De 6 a 1 año</option>
-                                                    <option value="5">De 1 a 5 años</option>
+                                                    <option value="5" selected>De 1 a 5 años</option>
                                                     <option value="6">De 5 a 10 años</option>
                                                     <option value="7">Más de 10 años</option>
                                                 </select>
@@ -422,7 +422,7 @@
                                             <div class="col-sm-12">
                                                 <select class="form-control" name="favorite_bank" id="favorite_bank" required>
                                                     <option value="">Seleccione una opción</option>
-                                                    <option value="1">Bancolombia</option>
+                                                    <option value="1" selected>Bancolombia</option>
                                                     <option value="2">BBVA</option>
                                                     <option value="3">Davivienda</option>
                                                     <option value="4">Puntos Baloto</option>
