new: Se actualiza el comportamiento de la plataforma

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -495,10 +495,14 @@
                             <div id="verification_success_msg" class="alert alert-success"></div>
                             <div id="confirm-sms-p">
                                 <p>
-                                    Para que podamos autenticar que tú eres el dueño de la
-                                    cuenta de identificación, te enviaremos dos códigos de autenticación.
-                                    Uno a tu número celular <strong id="final_phone"></strong> y otro a
-                                    tu correo electrónico <strong id="final_email"></strong>.
+                                    Por tu seguridad y para poder autenticar que eres el dueño de la cuenta,
+                                    te enviamos 2 codigos. Uno a tu numero celular <strong id="final_phone"></strong>
+                                    y otro a tu correo electrónico <strong id="final_email"></strong>.
+                                </p>
+                                <p>
+                                    Al aceptar los Terminos &amp; condiciones dentro de la plataforma Prestame.la,
+                                    declaro como usuario aceptar de manera expresa e inequívoca el contrato
+                                    y poder irrevocable, y las estipulaciones de estos acuerdos.
                                 </p>
                                 <div class="col-xs-12 col-sm-4">
                                     Ingresa el codigo de confirmación que llegó a tu <strong>teléfono celular</strong>:
