--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -504,22 +504,26 @@
                                     declaro como usuario aceptar de manera expresa e inequívoca el contrato
                                     y poder irrevocable, y las estipulaciones de estos acuerdos.
                                 </p>
-                                <div class="col-xs-12 col-sm-4">
-                                    Ingresa el codigo de confirmación que llegó a tu <strong>teléfono celular</strong>:
-                                    <input type="text" id="confirmation_code" class="form-control">
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-4">
+                                        Ingresa el codigo de confirmación que llegó a tu <strong>teléfono celular</strong>:
+                                        <input type="text" id="confirmation_code" class="form-control">
+                                    </div>
+                                    <div class="col-xs-12 col-sm-4">
+                                        Ingresa el codigo de confirmación que llegó a tu <strong>correo electrónico</strong>:
+                                        <input type="text" id="email_confirmation_code" class="form-control">
+                                    </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    Ingresa el codigo de confirmación que llegó a tu <strong>correo electrónico</strong>:
-                                    <input type="text" id="email_confirmation_code" class="form-control">
-                                </div>
-                                <div class="form_checkbox_wrap row">
-                                    <input class="checkbox" type="checkbox" name="contract" id="contract" required="">&nbsp;He Leido, entiendo y acepto el contrato</a>*
-                                </div>
-                                <div class="form_checkbox_wrap row">
-                                    <input class="checkbox" type="checkbox" name="contract" id="contract" required="">&nbsp;He Leido, entiendo y acepto otorgar poder irrevocable para suscribir pagare</a>*
-                                </div>
-                                <div class="col-xs-12 col-sm-4">
-                                    <button id="finish-btn" type="button" class="btn btn-default btn form-control" disabled>Finalizar solicitud</button>
+                                <div class="row">
+                                    <div class="col-xs-12">
+                                        <input class="checkbox" type="checkbox" name="contract" id="contract" required="">&nbsp;He Leido, entiendo y acepto el contrato</a>*
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <input class="checkbox" type="checkbox" name="contract" id="contract" required="">&nbsp;He Leido, entiendo y acepto otorgar poder irrevocable para suscribir pagare</a>*
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <button id="finish-btn" type="button" class="btn btn-default btn form-control" disabled>Finalizar solicitud</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
