new: Se actualiza el comportamiento de la plataforma

--- a/prestapi/templates/index.html
+++ b/prestapi/templates/index.html
@@ -587,7 +587,7 @@
         }
         var jqxhr = $.post('{% url 'api:ajax_check_email_code'%}', data, function(r) {
             if(r.status){
-                ajax_get_score();
+                window.location.href = global_confirmation_url;
             }else{
                 show_verification_error('Error al verificar el codigo enviado al correo electrónico, porfavor intente de nuevo.');
             }
